--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ auto: false
 server: false
 lsi: false
 markdown: rdiscount
-pyments: true
+pygments: true
 permalink: /:title
 paginate: 10
 category_dir: topics
