--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,5 @@ category_dir: topics
 category_title_prefix:
 exclude: ["Rakefile", "drafts", "README.markdown"]
 destination: public
+url: http://www.joshualindsey.net/blog
 
